# audidoza

./: .ghci  .gitignore  AppInit.hs  Application.hs  Foundation.hs  Import.hs  LICENSE  Settings.hs  audidoza.cabal  audit-service.cabal  devel.hs
Css/: DiffTree.hs  FontIcon.hs  Images.hs
Handler/Service/: Audits.hs  HistoryLine.hs  Keys.hs  Raw.hs  Version.hs
Handler/Site/: HistoryLine.hs  Keys.hs  Layout.hs  Raw.hs  Version.hs
app/: BaseImport.hs  RouteTypes.hs
app/Audit/: ContentHistory.hs  EditAction.hs  ObjectHistory.hs  VersionedChange.hs
app/Db/: AcidTypes.hs  AuditStore.hs  HistoryQueries.hs  HistoryUpdates.hs
app/Diff/: Content.hs  DiffTree.hs  ObjectTree.hs
app/ExtRep/: CssFontIcon.hs  DiffTreeCss.hs  DiffTreeToHtml.hs  ObjectEdit.xsd  XmlToObjectEdit.hs  XmlToObjectTree.hs
app/Service/: Version.hs
app/Util/: EntityKey.hs  Hxt.hs  List.hs  Match.hs  SequentialId.hs  Time.hs
config/: keter.yaml  routes  settings.yml
deploy/: Procfile
src/: Main.hs
src/Audit/: AcidTypes.hs  AuditStore.hs  ContentHistory.hs  History.hs  ObjectHistory.hs  VersionedChange.hs
src/Db/: AcidTypes.hs  HistoryQueries.hs
src/Diff/: Content.hs  DiffTree.hs  ObjectTree.hs
src/ExtRep/: CssFontIcon.hs  DiffTreeToHtml.hs  ObjectTreeBuilder.hs  ObjectTreeSerializer.hs  XmlToObjectEdit.hs  XmlToObjectTree.hs
src/Service/: AuditService.hs  Audits.hs  Dispatch.hs  HistoryLine.hs  Keys.hs  Routes.hs  Runner.hs
src/Util/: EntityKey.hs  Hxt.hs  Match.hs  SequentialId.hs  Time.hs
static/css/: diff-tree.css
templates/service/: history-line.hamlet  keys.hamlet  version.hamlet
templates/site/: bare-layout.hamlet  raw-audit-content.hamlet
test/: HxtUtil.hs  TreeUtil.hs  XmlData.hs  audit.hs  db.hs  diff.hs  ext-rep.hs  service
test/Html/: DiffPage.hs
tests/app/: TreeUtil.hs  XmlData.hs  db.hs  ext-rep.hs  xuc1.xml  xuc2.xml  xuc3.xml
tests/app/Html/: DiffJstPage.hs  DiffTreeCss.hs  diff-tree.css  diff-tree.css.initial  jst.html  page.html
