name:              audidoza
version:           0.1.0.0
synopsis:          Auditing of object trees.
author:            Andrea Falconi
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  ., app
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                
                UnicodeSyntax
                ConstraintKinds
                TypeSynonymInstances
                FlexibleInstances
                StandaloneDeriving
                DataKinds

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2.5      && < 1.3
                 , yesod-core                    >= 1.2.12     && < 1.3
                 , yesod-auth                    >= 1.3        && < 1.4
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.8
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.1.4      && < 2.2
                 , wai-logger                    >= 2.1        && < 2.2
                 
                 , base-unicode-symbols          >= 0.2        && < 0.3
                 , ixset-typed                   >= 0.2        && < 0.3
                 , containers                    >= 0.5        && < 0.6
                 , time                          >= 1.4        && < 1.5
                 , hxt                           >= 9.3        && < 9.4
                 , safecopy                      >= 0.8        && < 0.9
                 , acid-state                    >= 0.12       && < 0.13
                 , mtl                           >= 2.1        && < 2.2
                 , clay                          >= 0.9        && < 0.10
                 , heredoc                       >= 0.2        && < 0.3
                 , blaze-markup                  >= 0.6        && < 0.7
                 , blaze-html                    >= 0.7        && < 0.8
                 , conduit-extra                 >= 1.1        && < 1.2
                 , old-locale                    >= 1.0        && < 1.1                 

executable         audidoza
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , audidoza
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , audidoza
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , hspec
