name:              audidoza
version:           0.1.0.0
synopsis:          Auditing of object trees.
author:            Andrea Falconi
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:  ., app

    -- Audit library
    other-modules: BaseImport, RouteTypes
    other-modules: Audit.ContentHistory, Audit.EditAction, Audit.ObjectHistory, Audit.VersionedChange
    other-modules: Db.AcidTypes, Db.AuditStore, Db.HistoryQueries, Db.HistoryUpdates
    other-modules: Diff.Content, Diff.DiffTree, Diff.ObjectTree 
    other-modules: ExtRep.CssFontIcon, ExtRep.DiffTreeCss, 
                   ExtRep.DiffTreeToHtml, ExtRep.XmlToObjectEdit, ExtRep.XmlToObjectTree
    other-modules: Util.EntityKey, Util.Hxt, Util.List, Util.Match, Util.SequentialId, Util.Time

    -- Yesod scaffolding
    exposed-modules: Application, Foundation, Import, Settings, Settings.StaticFiles, 
                     Settings.Development

    exposed-modules: Handler.Home

    -- Audit Service hooks into Yesod
    exposed-modules: AppInit

    -- Audit Service handlers implementation in Yesod
    exposed-modules: Handler.Service.Audits, Handler.Service.HistoryLine, Handler.Service.Keys, 
                     Handler.Service.Version

    -- Audit Site handlers implementation in Yesod
    exposed-modules: Handler.Site.Keys, Handler.Site.HistoryLine, Handler.Site.Layout,
                     Handler.Site.Version


    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0 -fno-warn-orphans -fno-warn-missing-signatures
    else
        ghc-options:   -Wall -O2 -fno-warn-orphans -fno-warn-missing-signatures
    -- NOTE: Added -fno-warn-orphans to get rid of 'orphan instance' warning; consider fixing
    -- orphan instances instead.
    -- See: 
    --   * http://www.haskell.org/haskellwiki/Orphan_instance
    --   * http://stackoverflow.com/questions/3079537/orphaned-instances-in-haskell

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                -- additional estensions required by the audit lib in app/
                UnicodeSyntax
                ConstraintKinds
                TypeSynonymInstances
                FlexibleInstances
                StandaloneDeriving
                DataKinds

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.2.5      && < 1.3
                 , yesod-core                    >= 1.2.12     && < 1.3
                 , yesod-auth                    >= 1.3        && < 1.4
                 , yesod-static                  >= 1.2        && < 1.3
                 , yesod-form                    >= 1.3        && < 1.4
                 , yesod-routes                  >= 1.2        && < 1.3
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.8
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.1.4      && < 2.2
                 , wai-logger                    >= 2.1        && < 2.2
                 -- additional deps required by audit lib in app/
                 , base-unicode-symbols          >= 0.2        && < 0.3
                 , ixset-typed                   >= 0.2        && < 0.3
                 , containers                    >= 0.5        && < 0.6
                 , time                          >= 1.4        && < 1.5
                 , hxt                           >= 9.3        && < 9.4
                 , safecopy                      >= 0.8        && < 0.9
                 , acid-state                    >= 0.12       && < 0.13
                 , mtl                           >= 2.1        && < 2.2
                 , clay                          >= 0.9        && < 0.10
                 , heredoc                       >= 0.2        && < 0.3
                 , blaze-markup                  >= 0.6        && < 0.7
                 , blaze-html                    >= 0.7        && < 0.8
                 , conduit-extra                 >= 1.1        && < 1.2
                 , old-locale                    >= 1.0        && < 1.1                 

executable         audidoza
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , audidoza
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , audidoza
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , hspec
